[Nav] create by 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -205,6 +205,8 @@ sidebar-ios:
         url: /ios/xcode/build-error/
       - title: "  └ Could not find module for target x86_64-apple-ios-simulator"
         url: /ios/xcode/build-error/x86_64-apple-ios-simulator/
+      - title: "└ created by 변경하기"
+        url: /ios/xcode/create-by-name/
 #    children:
 #      - title: "iOS 15"
 #        url: /operators/
