--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -299,6 +299,11 @@ sidebar-algorithm:
     children:
       - title: "└ 2447 별 찍기 - 10"
         url: /algorithm/solved-silver1/2447/
+  - title: "Solved - Gold 4"
+    url: /algorithm/solved-gold4/
+    children:
+      - title: "└ 2448 별 찍기 - 11"
+        url: /algorithm/solved-gold4/2448/
   - title: "BEAKJOON"
     url: /algorithm/baekjoon/
     children:
