--- a/_config.yml
+++ b/_config.yml
@@ -102,11 +102,14 @@ analytics:
 # Site Author
 author:
   name             : "안녕하세요!"
-  avatar           : "/assets/images/welcome.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "만나뵈어 반갑습니다. 개인 공부 공간으로 틀린 부분이 있을 수 있습니다. 댓글로 알려주시면 감사하겠습니다!"
+  avatar           : "/assets/images/swift-man-background-non.png"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "개인 공부 공간으로 틀린 부분이 있을 수 있습니다. 댓글로 알려주시면 감사하겠습니다!"
   location         : "Republic of Korea Seoul"
   email            : "jiniopening@naver.com"
   links:
+    - label: "Month Archive"
+      icon: "fas fa-fw fa-calendar-check"
+      url: "/month-archive/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:jiniopening@naver.com"
